# EDAFinal

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  test.cpp
apps/: CMakeLists.txt  main.cpp
cmake/: Findflint.cmake
data/poly/: test07_out.v  test11_out.v
data/stru/: test01_out.v  test05_out.v  test11_out.v  test12_out.v  test14_out.v  test17_out.v  test19_out.v
debug/: a.txt  batch.py  batch.txt  lat.txt  log.txt  null.txt  r.txt  test.py  test.v
src/: CMakeLists.txt  Makefile  circuit.cpp  circuit.h  converter.cpp  converter.h  dag.h  debug.txt  linear.cpp  linear.h  linear_test.cpp  main  main.cpp  math_util.cpp  math_util.h  out.v  parser.cpp  parser.h  pcr.cpp  pcr.h  simulator.cpp  simulator.h  solver.cpp  solver.h  string_util.cpp  string_util.h
src/outputs/: 10.v  13.v  15.v  16.v  18.v  2.v  20.v  3.v  4.v  6.v  7.v  8.v  9.v
tests/: CMakeLists.txt  linear_test.cpp  solver_test.cpp
